# rds

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  TODO.md  index.html
src/: lib.rs
src/array/: csv.rs  edf.rs  mod.rs  ndindex.rs  numpy.rs
src/backend/: compute_backend.rs  mod.rs  opencl.rs
src/blas/: mod.rs
src/tests/: array.rs  backend.rs  blas.rs  csv.rs  edf.rs  mod.rs  numpy.rs  types.rs
src/types/: cast.rs  complex.rs  mod.rs
test_vector/edf/: source.txt
test_vector/numpy/: generate.py  verify.py
